[gd_scene load_steps=35 format=2]

[ext_resource path="res://Level2.gd" type="Script" id=1]
[ext_resource path="res://BG_lvl2.png" type="Texture" id=2]
[ext_resource path="res://Hud.tres" type="TileSet" id=3]
[ext_resource path="res://Platform.tscn" type="PackedScene" id=4]
[ext_resource path="res://LadderTop.tscn" type="PackedScene" id=5]
[ext_resource path="res://Ladder.tscn" type="PackedScene" id=6]
[ext_resource path="res://MovingPlatform.tscn" type="PackedScene" id=7]
[ext_resource path="res://VerticalMovingPlatform.tscn" type="PackedScene" id=8]
[ext_resource path="res://objeto_pistão.png" type="Texture" id=9]
[ext_resource path="res://objeto_pistão_menor.png" type="Texture" id=10]
[ext_resource path="res://FallingDebrisSpawner.tscn" type="PackedScene" id=11]
[ext_resource path="res://tile.png" type="Texture" id=12]
[ext_resource path="res://icon.png" type="Texture" id=13]
[ext_resource path="res://Character.tscn" type="PackedScene" id=14]
[ext_resource path="res://ElectricTrap.tscn" type="PackedScene" id=15]
[ext_resource path="res://GGJ19/Assets/Revisoes/Terminais/Terminal1.png" type="Texture" id=16]
[ext_resource path="res://GGJ19/Assets/Revisoes/Terminais/Terminal2.png" type="Texture" id=17]
[ext_resource path="res://objeto_sofa.png" type="Texture" id=18]
[ext_resource path="res://objeto_tv.png" type="Texture" id=19]
[ext_resource path="res://objeto_antena.png" type="Texture" id=20]
[ext_resource path="res://ShaderLabel.gd" type="Script" id=21]
[ext_resource path="res://fase1.shader" type="Shader" id=22]

[sub_resource type="GDScript" id=1]

script/source = "extends Area2D

var enabled = false setget set_enabled
var exited = false

func set_enabled(is_enabled):
	enabled = is_enabled
	if is_enabled:
		$AnimatedSprite.play()
		$AnimatedSprite.modulate = Color(1,1,1,1)

func _ready():
	connect(\"body_entered\",self,\"exit\")

func exit(body):
	print(body)
	print(Global.character)
	print(body == Global.character)
	print(not exited)
	print(enabled)
	if body == Global.character and not exited and enabled:
		Global.completed2 = true
		Global.transitioning = true
		exited = true
		Global.transition.fade_to(1.0,0.5)
		yield(Global.transition,\"done\")
		Global.goto(\"res://Hud.tscn\")
		$\"..\".queue_free()
"

[sub_resource type="RectangleShape2D" id=2]


[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="GDScript" id=4]

script/source = "extends Area2D

func _process(delta):
	if $\"../Portal\".enabled:
		return
	var has_sofa = false
	var has_antenna = false
	var has_tv = false
	for body in get_overlapping_bodies():
		if \"type\" in body and body.type == \"sofa\":
			has_sofa = true
		if \"type\" in body and body.type == \"antenna\":
			has_antenna = true
		if \"type\" in body and body.type == \"tv\":
			has_tv = true
	if has_sofa and has_antenna and has_tv:
		$\"../Portal\".enabled = true
		$\"../ShaderLabel\".settext(\"Everything is so much better!\\nI feel I belong here.\")"

[sub_resource type="RectangleShape2D" id=5]

extents = Vector2( 72, 32 )

[sub_resource type="GDScript" id=6]

script/source = "extends \"res://Box.gd\"

var type = \"sofa\""

[sub_resource type="RectangleShape2D" id=7]

extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=8]

extents = Vector2( 2.15164, 3.98676 )

[sub_resource type="GDScript" id=9]

script/source = "extends \"res://Box.gd\"

var type = \"tv\""

[sub_resource type="GDScript" id=10]

script/source = "extends \"res://Box.gd\"

var type = \"antenna\""

[sub_resource type="ShaderMaterial" id=11]

shader = ExtResource( 22 )

[sub_resource type="ViewportTexture" id=12]

viewport_path = NodePath("ShaderLabel/Viewport")

[node name="Level2" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.623529, 0.533333, 0.466667, 1 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 7, 0, 1, 3, 0, 2, 1, 0, 3, 3, 0, 4, 4, 0, 5, 0, 0, 6, 6, 0, 7, 6, 0, 8, 6, 0, 9, -1610612729, 0, 10, 2, 0, 11, 0, 0, 12, 1, 0, 13, 3, 0, 14, 3, 0, 15, 6, 0, 16, 1, 0, 17, 2, 0, 18, 0, 0, 19, 4, 0, 20, 4, 0, 21, 1, 0, 22, 3, 0, 23, 4, 0, 24, 2, 0, 25, 3, 0, 26, 1, 0, 27, 2, 0, 28, 1, 0, 29, 2, 0, 30, 3, 0, 31, -1610612729, 0, 65536, -1610612732, 0, 65545, -1610612736, 0, 65567, -1610612736, 0, 131072, -1610612733, 0, 131081, -1610612730, 0, 131103, -1610612732, 0, 196608, -1610612733, 0, 196617, -1610612733, 0, 196639, -1610612735, 0, 262144, -1610612730, 0, 262153, -1610612735, 0, 262175, -1610612730, 0, 327680, -1610612734, 0, 327689, -1610612732, 0, 327695, -1610612729, 0, 327706, -1610612729, 0, 327707, 3, 0, 327708, 3, 0, 327709, 2, 0, 327710, 1, 0, 327711, -1610612729, 0, 393216, -1610612735, 0, 393225, -1610612733, 0, 393231, -1610612734, 0, 393242, -1610612730, 0, 393247, -1610612730, 0, 458752, -1610612735, 0, 458761, -1610612730, 0, 458767, -1610612733, 0, 458778, -1610612735, 0, 458783, -1610612730, 0, 524288, -1610612733, 0, 524297, -1610612729, 0, 524303, -1610612729, 0, 524304, 6, 0, 524305, 0, 0, 524306, 1, 0, 524307, 1, 0, 524308, 6, 0, 524309, 6, 0, 524310, 6, 0, 524311, 3, 0, 524312, 3, 0, 524313, 2, 0, 524314, -1610612729, 0, 524315, 1, 0, 524316, 6, 0, 524317, 2, 0, 524318, 2, 0, 524319, -1610612729, 0, 589824, -1610612732, 0, 589855, -1610612736, 0, 655360, -1610612736, 0, 655391, -1610612736, 0, 720896, -1610612736, 0, 720927, -1610612735, 0, 786432, -1610612729, 0, 786433, 0, 0, 786434, 4, 0, 786435, 6, 0, 786436, 0, 0, 786437, 3, 0, 786438, 2, 0, 786439, 6, 0, 786440, 6, 0, 786441, -1610612729, 0, 786463, -1610612730, 0, 851968, -1610612734, 0, 851999, -1610612732, 0, 917504, -1610612730, 0, 917535, -1610612736, 0, 983040, -1610612733, 0, 983071, -1610612736, 0, 1048576, -1610612736, 0, 1048607, -1610612734, 0, 1114112, 7, 0, 1114113, 0, 0, 1114114, 4, 0, 1114115, 6, 0, 1114116, 0, 0, 1114117, 2, 0, 1114118, 4, 0, 1114119, 6, 0, 1114120, 6, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 4, 0, 1114124, 7, 0, 1114125, 4, 0, 1114126, 3, 0, 1114127, 7, 0, 1114128, 4, 0, 1114129, 7, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 6, 0, 1114133, 7, 0, 1114134, 1, 0, 1114135, 7, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 6, 0, 1114139, 7, 0, 1114140, 2, 0, 1114141, 3, 0, 1114142, 1, 0, 1114143, 7, 0 )

[node name="Platform" parent="." instance=ExtResource( 4 )]
position = Vector2( 128, 128 )

[node name="Platform2" parent="." instance=ExtResource( 4 )]
position = Vector2( 112, 128 )

[node name="Platform3" parent="." instance=ExtResource( 4 )]
position = Vector2( 64, 128 )

[node name="Platform4" parent="." instance=ExtResource( 4 )]
position = Vector2( 48, 128 )

[node name="Platform5" parent="." instance=ExtResource( 4 )]
position = Vector2( 16, 64 )

[node name="Platform6" parent="." instance=ExtResource( 4 )]
position = Vector2( 32, 64 )

[node name="Platform7" parent="." instance=ExtResource( 4 )]
position = Vector2( 224, 136 )

[node name="Platform8" parent="." instance=ExtResource( 4 )]
position = Vector2( 208, 136 )

[node name="Platform9" parent="." instance=ExtResource( 4 )]
position = Vector2( 160, 104 )

[node name="Platform10" parent="." instance=ExtResource( 4 )]
position = Vector2( 176, 104 )

[node name="Platform11" parent="." instance=ExtResource( 4 )]
position = Vector2( 224, 80 )

[node name="Platform12" parent="." instance=ExtResource( 4 )]
position = Vector2( 208, 80 )

[node name="LadderTop" parent="." instance=ExtResource( 5 )]
position = Vector2( 96, 136 )

[node name="LadderTop2" parent="." instance=ExtResource( 5 )]
position = Vector2( 64, 72 )

[node name="Ladder" parent="." instance=ExtResource( 6 )]
position = Vector2( 64, 88 )

[node name="Ladder2" parent="." instance=ExtResource( 6 )]
position = Vector2( 64, 104 )

[node name="Ladder3" parent="." instance=ExtResource( 6 )]
position = Vector2( 64, 120 )

[node name="Ladder4" parent="." instance=ExtResource( 6 )]
position = Vector2( 96, 152 )

[node name="Ladder5" parent="." instance=ExtResource( 6 )]
position = Vector2( 96, 168 )

[node name="Ladder6" parent="." instance=ExtResource( 6 )]
position = Vector2( 96, 184 )

[node name="MovingPlatform" parent="." instance=ExtResource( 7 )]
position = Vector2( 256, 80 )
distance = 128
duration = 4

[node name="Elevator3" type="Node" parent="."]

[node name="VerticalMovingPlatform6" parent="Elevator3" instance=ExtResource( 8 )]
position = Vector2( 384, 272 )

[node name="VerticalMovingPlatform7" parent="Elevator3" instance=ExtResource( 8 )]
position = Vector2( 400, 272 )

[node name="VerticalMovingPlatform8" parent="Elevator3" instance=ExtResource( 8 )]
position = Vector2( 416, 272 )

[node name="Sprite13" type="Sprite" parent="Elevator3/VerticalMovingPlatform8"]
position = Vector2( -8, 120 )
z_index = 1
texture = ExtResource( 9 )

[node name="Elevator2" type="Node" parent="."]

[node name="VerticalMovingPlatform3" parent="Elevator2" instance=ExtResource( 8 )]
position = Vector2( 288, 272 )

[node name="VerticalMovingPlatform4" parent="Elevator2" instance=ExtResource( 8 )]
position = Vector2( 304, 272 )

[node name="VerticalMovingPlatform5" parent="Elevator2" instance=ExtResource( 8 )]
position = Vector2( 320, 272 )

[node name="Sprite14" type="Sprite" parent="Elevator2/VerticalMovingPlatform5"]
position = Vector2( -8, 120 )
texture = ExtResource( 9 )

[node name="Elevator1" type="Node" parent="."]

[node name="VerticalMovingPlatform" parent="Elevator1" instance=ExtResource( 8 )]
position = Vector2( 208, 272 )

[node name="VerticalMovingPlatform2" parent="Elevator1" instance=ExtResource( 8 )]
position = Vector2( 224, 272 )

[node name="Sprite15" type="Sprite" parent="Elevator1/VerticalMovingPlatform2"]
position = Vector2( 0, 120 )
texture = ExtResource( 10 )

[node name="FallingDebrisSpawner" parent="." instance=ExtResource( 11 )]
position = Vector2( 256, 144 )
timer = 2
texture = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="FallingDebrisSpawner"]
visible = false
position = Vector2( 8, 8 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 13 )

[node name="Character" parent="." instance=ExtResource( 14 )]
position = Vector2( 71.9357, 272 )

[node name="ElectricTrap" parent="." instance=ExtResource( 15 )]
position = Vector2( 256, 112 )

[node name="ElectricTrap2" parent="." instance=ExtResource( 15 )]
position = Vector2( 272, 112 )

[node name="ElectricTrap3" parent="." instance=ExtResource( 15 )]
position = Vector2( 288, 112 )

[node name="ElectricTrap4" parent="." instance=ExtResource( 15 )]
position = Vector2( 304, 112 )

[node name="ElectricTrap5" parent="." instance=ExtResource( 15 )]
position = Vector2( 320, 112 )

[node name="ElectricTrap6" parent="." instance=ExtResource( 15 )]
position = Vector2( 336, 112 )

[node name="ElectricTrap7" parent="." instance=ExtResource( 15 )]
position = Vector2( 352, 112 )

[node name="ElectricTrap8" parent="." instance=ExtResource( 15 )]
position = Vector2( 368, 112 )

[node name="ElectricTrap9" parent="." instance=ExtResource( 15 )]
position = Vector2( 384, 112 )

[node name="ElectricTrap10" parent="." instance=ExtResource( 15 )]
position = Vector2( 400, 112 )

[node name="Portal" type="Area2D" parent="."]
position = Vector2( 40, 256 )
script = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal"]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Portal"]
modulate = Color( 0.364706, 0.364706, 0.364706, 1 )
frames = SubResource( 3 )

[node name="Home" type="Area2D" parent="."]
position = Vector2( 88, 240 )
script = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Home"]
shape = SubResource( 5 )

[node name="Sofa" type="KinematicBody2D" parent="."]
position = Vector2( 459.894, 256 )
script = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sofa"]
position = Vector2( 8, 8 )
shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="Sofa"]
position = Vector2( 8.10913, 8.00001 )
texture = ExtResource( 18 )

[node name="RightSide" type="Area2D" parent="Sofa"]
position = Vector2( 16, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sofa/RightSide"]
position = Vector2( 9.53674e-07, 0 )
shape = SubResource( 8 )

[node name="LeftSide" type="Area2D" parent="Sofa"]
position = Vector2( -0.0281, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sofa/LeftSide"]
shape = SubResource( 8 )

[node name="TV" type="KinematicBody2D" parent="."]
position = Vector2( 448, 64 )
script = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TV"]
position = Vector2( 8, 8 )
shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="TV"]
position = Vector2( 7.97189, 8 )
texture = ExtResource( 19 )

[node name="RightSide" type="Area2D" parent="TV"]
position = Vector2( 16, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TV/RightSide"]
position = Vector2( 9.53674e-07, 0 )
shape = SubResource( 8 )

[node name="LeftSide" type="Area2D" parent="TV"]
position = Vector2( -0.0281, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TV/LeftSide"]
shape = SubResource( 8 )

[node name="Antenna" type="KinematicBody2D" parent="."]
position = Vector2( 32, 48 )
script = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Antenna"]
position = Vector2( 8, 8 )
shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="Antenna"]
position = Vector2( 8, 8 )
texture = ExtResource( 20 )

[node name="RightSide" type="Area2D" parent="Antenna"]
position = Vector2( 16, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Antenna/RightSide"]
position = Vector2( 9.53674e-07, 0 )
shape = SubResource( 8 )

[node name="LeftSide" type="Area2D" parent="Antenna"]
position = Vector2( -0.0281, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Antenna/LeftSide"]
shape = SubResource( 8 )

[node name="ShaderLabel" type="Node2D" parent="."]
position = Vector2( 272, 32 )
script = ExtResource( 21 )

[node name="Viewport" type="Viewport" parent="ShaderLabel"]
size = Vector2( 300, 100 )
transparent_bg = true
render_target_v_flip = true

[node name="Label" type="Label" parent="ShaderLabel/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
text = "This place is so dull...
Time to make it feel better"
align = 1

[node name="TextureRect" type="TextureRect" parent="ShaderLabel"]
material = SubResource( 11 )
margin_left = -32.0
margin_top = -8.0
margin_right = 268.0
margin_bottom = 92.0
texture = SubResource( 12 )

